[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "standup-ai"
version = "0.1.0"
description = "Generate your daily standup from git history using AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["git", "standup", "ai", "llm", "developer-tools", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "anthropic>=0.25",
    "openai>=1.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "freezegun>=1.0",
]

[project.scripts]
standup-ai = "standup_ai.cli:main"

[project.urls]
Homepage = "https://github.com/faw21/standup-ai"
Repository = "https://github.com/faw21/standup-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/standup_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=standup_ai --cov-report=term-missing"

[tool.coverage.run]
source = ["standup_ai"]
